# cpp-sdk

./: .clang-format  .clangd  .editorconfig  .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  RELEASING.md
.github/workflows/: publish.yml  test.yml
cmake/: eppoclientConfig.cmake.in
examples/: assignment_details.cpp  bandits.cpp  flag_assignments.cpp  manual_sync.cpp
scripts/: check-version-consistency.sh  generate_compile_commands.sh
src/: application_logger.hpp  bandit_model.cpp  bandit_model.hpp  client.cpp  client.hpp  config_response.cpp  config_response.hpp  configuration.cpp  configuration.hpp  configuration_store.cpp  configuration_store.hpp  evalbandits.cpp  evalbandits.hpp  evalflags.cpp  evalflags.hpp  evaluation_client.cpp  evaluation_client.hpp  flag_sdk.cpp  flag_sdk.h  json_utils.hpp  lru2q.hpp  lru_assignment_logger.cpp  lru_assignment_logger.hpp  lru_bandit_logger.cpp  lru_bandit_logger.hpp  parse_result.hpp  rules.cpp  rules.hpp  time_utils.cpp  time_utils.hpp  version.hpp
test/: test_allocation_evaluation_details.cpp  test_assignment_details.cpp  test_bandit_action_details.cpp  test_bandit_model.cpp  test_config_response_json.cpp  test_configuration.cpp  test_configuration_store.cpp  test_flag_evaluation.cpp  test_flag_sdk.cpp  test_four_part_version.cpp  test_graceful_failure_mode.cpp  test_lru_assignment_logger.cpp  test_lru_bandit_logger.cpp  test_parse_error_tracking.cpp  test_semver.cpp  test_serialized_json_assignment.cpp  test_time_utils.cpp
test/shared_test_cases/: test_bandit_evaluation.cpp  test_flag_evaluation.cpp  test_flag_evaluation_details.cpp  test_flag_performance.cpp
